cmake_minimum_required(VERSION 3.13)
project(hackerRank_CPlus_practice)

set(CMAKE_CXX_STANDARD 17)

add_executable(hackerRank_CPlus_practice main.cpp 001_basic_data_type.cpp common.h 002_conditional_statement.cpp 003_for_loop.cpp 004_function.cpp 005_pointer.cpp 006_array.cpp 007_variable_size_array.cpp 008_input_and_output.cpp 009_StringStream.cpp)